[package]
name = "openbas-implant"
version = "1.16.0"
edition = "2021"


[dependencies]
ureq = { version = "2.1", features = ["tls", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
log = { version = "0.4.21", features = ["kv"] }
base64 = "0.22.1"
mid = "3.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.3"
rolling-file = "0.2.0"
clap = { version = "4.5.7", features = ["derive"] }
regex = "1.10.5"
serde_json = "1.0.117"
mailparse = "0.16.0"
rustls = { version ="0.23.13", features = ["ring"], default-features = false }
rustls-platform-verifier = "0.5.0"
