[package]
name = "openbas-implant"
version = "1.18.7"
edition = "2021"


[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls", "rustls-tls-native-roots", "json"], default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = {version = "1.0.140"}
log = { version = "0.4.21", features = ["kv"] }
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.3"
rolling-file = "0.2.0"
clap = { version = "4.5.7", features = ["derive"] }
mailparse = "0.16.0"

[dev-dependencies]
mockito = "1.7.0"
